# HelloWorldRpiC

./: CMakeLists.txt  Hello.c  toolchain-rpi.cmake
Adder/: Adder.c  CMakeLists.txt
